src/main/java/com/example/webshop/models/errors/BasicErrorResponseModel.java
//package com.example.webshop.models.errors;
//
//import lombok.AllArgsConstructor;
//import lombok.Getter;
//import lombok.NoArgsConstructor;
//import lombok.Setter;
//
//@AllArgsConstructor @NoArgsConstructor @Getter @Setter
//public class BasicErrorResponseModel extends ErrorResponseModel {
//
//    private String message;
//
//}
